--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,4 +1,29 @@
-body{
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+html{
+    font-size: 62.5%;
+}
+
+h1{
+    color: crimson;
+    font-size: 4.5rem;
+}
+p{
+    color: darkgoldenrod;
+    font-size: 3.5rem;
+}
+
+h1, p{
     text-align: center;
-    font-family: 'Courier New', Courier, monospace;
+}
+#container
+{
+    width: 70%;
+    padding: 1em;
+    text-align: left;
+    border: 1px solid #DDD;
+    margin: 0 auto;
 }
